# cabletract

./: .gitignore  LICENSE  README.md  cabletract_analysis.py  draft_load_sensitivity.csv  field_length_sensitivity.csv  offgrid_feasibility_map.csv  operation_type_comparison.csv  pyproject.toml  reference_case.csv  setup_time_sensitivity.csv  shape_efficiency_sensitivity.csv
cabletract/: __init__.py  compaction.py  economics.py  energy.py  layout.py  ml.py  params.py  physics.py  plotting.py  simulate.py  soil.py  sweeps.py  uncertainty.py  variants.py
drawings/: AI_PROMPTS.md
scripts/: run_phase1_physics.py  run_phase2_soil.py  run_phase3_energy.py  run_phase4_layout.py  run_phase5_uncertainty.py  run_phase6_ml.py  run_phase6b_variants.py  run_phase7_envelope.py
tables/: F11_time_budget.csv  F12_compaction_map.csv  F13_sobol_indices.csv  F14_tornado_npv.csv  F15_mc_throughput_envelope.csv  F16_lcoe_vs_farm_size.csv  F16_npv_vs_farm_size.csv  F17_lca_co2.csv  F1_cable_sag.csv  F20_variant_comparison.csv  F21_operating_envelope.csv  F2_anchor_envelope.csv  F3_motor_power.csv  F4_codesign_comparison.csv  F4_draft_violin.csv  F5_speed_dependence.csv  F6_calendar_heatmap.csv  F7_battery_week.csv  F8_feasibility_map.csv  F9_shape_efficiency_distribution.csv  Phase6_pareto_front.csv  Phase6_polygon_predictor_importance.csv  Phase6_polygon_predictor_r2.csv  Phase6_surrogate_feature_importance.csv  Phase6_surrogate_r2.csv  Phase6b_drone_alignment.csv  competitor_comparison.csv
tests/: test_compaction.py  test_economics.py  test_energy.py  test_layout.py  test_ml.py  (+5 more)
(+7 files in other folders)
