[tool.poetry]
name = "cabletract"
version = "0.1.0"
description = "CableTract: a co-designed cable-driven field robot for low-compaction, off-grid agriculture — analytical feasibility framework"
authors = ["Ozgur Yilmaz <ozguryilmaz@atu.edu.tr>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26"
scipy = "^1.12"
pandas = "^2.2"
matplotlib = "^3.8"
shapely = "^2.0"
networkx = "^3.2"
scikit-learn = "^1.4"
SALib = "^1.5"
pvlib = "^0.10"
pymoo = "^0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
